# log_classification

./: .gitignore  README.md  pyproject.toml
classification/: CLI.py  main.py
tests/: test_cli.py
