[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'classification'
version = '1.0.0'
description = 'a script to classify a log file base on 5 levels : debug,info,warning,error,critical'
authors = [{name = 'Alhareth Aldaaja'}]
readme = 'README.md'
requires-python = '>=3.13.7'
dependencies = []

[project.scripts]
act = 'classification.CLI:master'

